simulation-maas/overlays/maas-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simulation-maas
spec:
  entryPoints:
    - web
    # - websecure
  routes:
    - match: Host(`${SIMULATION_MAAS_FQDN}`)
      kind: Rule
      services:
        - name: simulation-maas
          port: 8888
  # tls:
  #   secretName: ${SECRET_NAME} # maas-tls #cert-dev
  #   domains:
  #     - main: ${BASE_DOMAIN}
  #       sans:
  #         - "*.preview.${BASE_DOMAIN}"
  #         - "*.testing.${BASE_DOMAIN}"
